[package]
name = "rust-lab"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
env_logger = "0.8.4"
bytes = "1.3.0"
async-stream = "0.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.7"
prost = "0.10"
itertools = "0.10.5"
crc32fast = "1.3.2"

[build-dependencies]
tonic-build = "0.7"


