[package]
name = "rust-lab"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "types"
path = "src/types.rs"

[[bin]]
name = "call-java"
path = "src/j4rs.rs"

[[bin]]
name = "stream"
path = "src/stream.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jni = "0.21"
j4rs = "0.15"
env_logger = "0.8.4"
bytes = "1.3.0"
anyhow = "1"
async-stream = "0.3"
futures = "0.3"
futures-async-stream = "0.2"
mysql_async = { version = "0.31", default-features = false, features = ["minimal"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.7"
prost = "0.10"
itertools = "0.10.5"
crc32fast = "1.3.2"

[build-dependencies]
tonic-build = "0.7"


